--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -9,18 +9,19 @@
     "dev": "nodemon src/index.ts"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "prisma": "^5.0.0",
-    "@prisma/client": "^5.0.0",
-    "jsonwebtoken": "^9.0.0",
+    "@prisma/client": "^6.13.0",
     "bcrypt": "^5.1.0",
-    "redis": "^4.6.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "helmet": "^7.0.0",
-    "cors": "^2.8.5"
+    "jsonwebtoken": "^9.0.0",
+    "prisma": "^6.13.0",
+    "redis": "^4.6.0"
   },
   "devDependencies": {
-    "ts-node": "^10.9.1",
     "nodemon": "^3.0.0",
-    "typescript": "^5.0.0"
+    "prisma": "^6.13.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   }
 }
