--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -12,13 +12,15 @@
     "@prisma/client": "^6.13.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
     "prisma": "^6.13.0",
-    "redis": "^4.6.0"
+    "redis": "^5.7.0"
   },
   "devDependencies": {
+    "@types/node": "^24.1.0",
     "nodemon": "^3.0.0",
     "prisma": "^6.13.0",
     "ts-node": "^10.9.2",
