--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -9,22 +9,25 @@
     "dev": "nodemon src/index.ts"
   },
   "dependencies": {
-    "@prisma/client": "^6.13.0",
+    "@prisma/client": "^5.0.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
     "express": "^4.18.2",
-    "express-rate-limit": "^8.0.1",
+    "express-rate-limit": "^7.0.0",
+    "googleapis": "^154.1.0",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
-    "prisma": "^6.13.0",
-    "redis": "^5.7.0"
+    "prisma": "^5.0.0",
+    "redis": "^4.6.0",
+    "zod": "^4.0.14"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/express-rate-limit": "^6.0.2",
     "@types/helmet": "^4.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.1.0",
     "nodemon": "^3.1.10",
     "prisma": "^6.13.0",
