--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -4,9 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "node --max-old-space-size=512 src/index.ts",
     "build": "tsc",
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts",
+    "test": "set NODE_ENV=test&& jest --detectOpenHandles --forceExit",
+    "test:auth": "set NODE_ENV=test&& jest auth.test.ts",
+    "test:google": "set NODE_ENV=test&& jest auth.google.test.ts",
+    "test:watch": "set NODE_ENV=test&& jest --watch"
   },
   "dependencies": {
     "@prisma/client": "^5.0.0",
@@ -27,10 +31,15 @@
     "@types/express": "^5.0.3",
     "@types/express-rate-limit": "^6.0.2",
     "@types/helmet": "^4.0.0",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.1.0",
+    "@types/supertest": "^6.0.3",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.10",
     "prisma": "^6.13.0",
+    "supertest": "^6.3.0",
+    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   }
