Add Event Management API and tests

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node --max-old-space-size=512 src/index.ts",
+    "start": "ts-node src/index.ts",
     "build": "tsc",
     "dev": "nodemon src/index.ts",
     "test": "set NODE_ENV=test&& jest --detectOpenHandles --forceExit",
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.0",
     "prisma": "^6.13.0",
     "redis": "^5.7.0",
+    "slugify": "^1.6.6",
     "zod": "^4.0.14"
   },
   "devDependencies": {
