--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@prisma/client": "^5.0.0",
+    "@types/qrcode": "^1.5.5",
+    "@types/uuid": "^10.0.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
@@ -22,8 +24,10 @@
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
     "prisma": "^6.13.0",
+    "qrcode": "^1.5.4",
     "redis": "^5.7.0",
     "slugify": "^1.6.6",
+    "uuid": "^11.1.0",
     "zod": "^4.0.14"
   },
   "devDependencies": {
