Contact Us and About Us Pages Completed

--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "format": "prettier --write 'packages/**/*.{ts,tsx,json}'"
   },
   "devDependencies": {
+    "@types/minimatch": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.0.0",
     "prettier": "^3.0.0",
-    "typescript": "^5.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0"
+    "typescript": "^5.0.0"
   }
 }
