--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -13,10 +13,10 @@
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.1",
     "@react-spring/parallax": "^10.0.1",
-    "@react-three/fiber": "^8.2.2",
     "@socket.io/redis-adapter": "^8.3.0",
     "@tanstack/react-query": "^5.84.1",
     "@types/lodash": "^4.17.20",
+    "@types/lodash-es": "^4.17.12",
     "@types/socket.io-client": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
     "@typescript-eslint/parser": "^8.38.0",
@@ -32,11 +32,11 @@
     "heroicons": "^2.2.0",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "next-auth": "^4.24.11",
-    "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
@@ -45,14 +45,16 @@
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
-    "react-leaflet": "^5.0.0-rc.2",
+    "react-leaflet": "4.2.1",
     "react-query": "^3.39.3",
     "rimraf": "^6.0.1",
     "socket.io": "^4.8.1",
+    "socket.io-adapter": "^2.5.4",
     "socket.io-client": "^4.8.1",
     "supertest": "^7.1.4",
+    "swiper": "^11.2.10",
+    "swipper-react": "^0.1.0",
     "tailwind-merge": "^3.3.1",
-    "three": "^0.137.0",
     "typescript": "^5.9.2",
     "zod": "^4.0.14",
     "zxcvbn": "^4.4.2"
@@ -61,6 +63,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/leaflet": "^1.9.20",
+    "@types/minimatch": "^6.0.0",
     "@types/node": "^20",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
