--- a/packages/web/public/manifest.json
+++ b/packages/web/public/manifest.json
@@ -1,15 +1,21 @@
 {
-    "name": "Eswa Tickets",
-    "short_name": "EswaTickets",
-    "start_url": "/organizer",
+    "name": "My Next.js PWA",
+    "short_name": "PWA",
+    "  description": "A Progressive Web App built with Next.js",
+    "start_url": "/",
     "display": "standalone",
-    "background_color": "#4a148c",
-    "theme_color": "#ff6d00",
+    "background_color": "#ffffff",
+    "theme_color": "#000000",
     "icons": [
         {
-            "src": "/favicon.ico",
-            "sizes": "64x64",
-            "type": "image/x-icon"
+            "src": "/icon-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "/icon-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png"
         }
     ]
 }
