--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -12,7 +12,13 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@react-spring/parallax": "^10.0.1",
+    "@remixicon/react": "^4.6.0",
     "@socket.io/redis-adapter": "^8.3.0",
     "@tanstack/react-query": "^5.84.1",
     "@types/lodash": "^4.17.20",
@@ -25,28 +31,33 @@
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "eslint": "^9.32.0",
     "framer-motion": "^12.23.12",
     "framer-motion-3d": "^11.2.0",
+    "geist": "^1.4.2",
     "glob": "^11.0.3",
     "heroicons": "^2.2.0",
+    "install": "^0.13.0",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "lodash.debounce": "^4.0.8",
-    "lucide-react": "^0.525.0",
+    "lucide-react": "^0.539.0",
     "next": "15.3.5",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
+    "react-day-picker": "^9.8.1",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-leaflet": "4.2.1",
     "react-query": "^3.39.3",
+    "recharts": "^3.1.2",
     "rimraf": "^6.0.1",
     "socket.io": "^4.8.1",
     "socket.io-adapter": "^2.5.4",
@@ -55,6 +66,7 @@
     "swiper": "^11.2.10",
     "swipper-react": "^0.1.0",
     "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "^2.1.0",
     "typescript": "^5.9.2",
     "zod": "^4.0.14",
     "zxcvbn": "^4.4.2"
